# PalantiR

./: .gitignore  .gitmodules  DESCRIPTION  NAMESPACE  README.md  example.fa
R/: Alignment.R  Palantir.R  Phylogeny.R  RcppExports.R  SubstitutionModel.R  loadRcppModules.R  plotAlignment.R  plotPhylogeny.R  plotSimulation.R
data/: amino_acid_equilibrium.csv  amino_acid_fitness_N_1000.csv  hg19.100way.tree  mammals.newick  mammals_fitness.tree  mammals_no_switch.newick  mammals_population.tree  mammals_pruned.tree  one_branch.newick  primates.newick  primates_fitness.tree  psi-c50-1.txt  rooted.tree  simple.tree  vertebrates.tree
docs/: Branch_Heterogeneity.Rmd  Branch_Heterogeneity.html  Co_Evolution.Rmd  Co_Evolution.html  General_Time_Reversible.Rmd  (+24 more)
src/Palantir_Core/: .travis.yml  CMakeLists.txt  CoEvolution.cpp  CoEvolution.hpp  GeneralTimeReversible.cpp  GeneralTimeReversible.hpp  GeneticCode.cpp  GeneticCode.hpp  HasegawaKishinoYano.cpp  HasegawaKishinoYano.hpp  IntervalHistory.cpp  IntervalHistory.hpp  MarkovModel.cpp  MarkovModel.hpp  MarkovModulated.cpp  MarkovModulated.hpp  MutationSelection.cpp  MutationSelection.hpp  Palantir.cpp  Palantir.hpp  Phylogeny.cpp  Phylogeny.hpp  Simulate.cpp  Simulate.hpp  SiteSimulation.cpp  SiteSimulation.hpp  SubstitutionHistory.cpp  SubstitutionHistory.hpp  Util.cpp  Util.hpp
src/Palantir_Core/test/: CoEvolution.cpp  FitnessSwitching.cpp  GeneticCode.cpp  HasegawaKishinoYano.cpp  IntervalHistory.cpp  MarkovModel.cpp  MutationSelection.cpp  Phylogeny.cpp  PopulationSwitching.cpp  Simulate.cpp  Util.cpp  test.cpp  test.hpp
(+212 files in other folders)
